# FastWriterwithSound

./: .gitignore  Cargo.toml  README.md  config.toml
soundtrack/cherrymx-black-abs/: config.json
soundtrack/cherrymx-black-pbt/: config.json
soundtrack/cherrymx-blue-abs/: config.json
soundtrack/cherrymx-blue-pbt/: config.json
soundtrack/cherrymx-brown-abs/: config.json
soundtrack/cherrymx-brown-pbt/: config.json
soundtrack/cherrymx-red-abs/: config.json
soundtrack/cherrymx-red-pbt/: config.json
soundtrack/eg-crystal-purple/: config.json
soundtrack/eg-oreo/: config.json
soundtrack/topre-purple-hybrid-pbt/: config.json
src/: main.rs
