[package]
name = "keylogger-sound"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
cpal = "0.16.0"
fs = "0.0.5"
rdev = "0.5.3"
rodio = { version = "0.21.1", features = ["vorbis"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
symphonia = "0.5.4"
symphonia-codec-vorbis = "0.5.4"
symphonia-core = "0.5.4"
symphonia-format-ogg = "0.5.4"
toml = "0.9.5"
